--- a/profapp/templates/_ruslan/_index_layout.html
+++ b/profapp/templates/_ruslan/_index_layout.html
@@ -109,13 +109,8 @@
 
             var pr_chat_socket = io.connect('//socket.{{ MAIN_DOMAIN }}');
 
-            pr_chat_socket.on('new_message', function (resp) {
-                console.log(resp);
-                var total_messages = 0;
-                $.each(resp['unread_message_count'], function (chatroom_id, unread) {
-                    total_messages += unread;
-                });
-                angularControllerFunction('user_controller', 'set_unread_message_count')(total_messages + resp['unread_notification_count']);
+            pr_chat_socket.on('set_unread_message_count', function (resp) {
+                angularControllerFunction('user_controller', 'set_unread_message_count')(resp['total']);
             });
 
             {% for message in get_flashed_messages() %}
