--- a/profapp/templates/company/companies.html
+++ b/profapp/templates/company/companies.html
@@ -186,7 +186,7 @@
 
 
             <span class="label label-warning w100 fl tac" ng-show="companies_join_to_loading"><i
-                    class="fa fa-spinner"></i>&nbsp;&nbsp;&nbsp;{{ _('Loading companies') }} </span>
+                    class="fa fa-spinner fa-spin"></i>&nbsp;&nbsp;&nbsp;{{ _('Loading companies') }} </span>
                 <span class="label label-info w100 fl tac"
                       ng-show="!companies_join_to_loading && companies_join_to.length && !companies_join_to_there_is_more"><i
                         class="fa fa-check"></i>&nbsp;&nbsp;&nbsp;{{ _('There is no more companies to join') }}</span>
@@ -285,7 +285,7 @@
                 </div>
 
                 <span class="label label-warning w100 fl tac" ng-show="employments_loading"><i
-                        class="fa fa-spinner"></i>&nbsp;&nbsp;&nbsp;{{ _('Loading employments') }} </span>
+                        class="fa fa-spinner fa-spin"></i>&nbsp;&nbsp;&nbsp;{{ _('Loading employments') }} </span>
                 <span class="label label-info w100 fl tac"
                       ng-show="!employments_loading && employments.length && !employments_there_is_more"><i
                         class="fa fa-check"></i>&nbsp;&nbsp;&nbsp;{{ _('All employments loaded') }}</span>
