--- a/profapp/templates/company/company_readers.html
+++ b/profapp/templates/company/company_readers.html
@@ -66,7 +66,7 @@ th, td {
         <h3 style="text-align: center!important;">{{_('Portal readers')}}</h3>
         <div class="grid" id="grid1" ui-grid-edit ui-grid-pagination ui-grid="gridOptions1" >
             <div class="well grid-loading" ng-show="loading">
-              <i class="fa fa-spin fa-spinner"></i><div>{{ _('Data Loading...') }}</div>
+              <i class="fa fa-spinner fa-spin"></i><div>{{ _('Data Loading...') }}</div>
             </div>
 
         </div>
