--- a/profapp/templates/company/material_details.html
+++ b/profapp/templates/company/material_details.html
@@ -173,7 +173,7 @@
         <h2>{{ _('Material is published or can be published at portals') }}</h2>
         <div class="grid" id="grid1" ui-grid-edit ui-grid="gridOptions1">
             <div class="well grid-loading" ng-show="loading">
-                <i class="fa fa-spin fa-spinner"></i>
+                <i class="fa fa-spinner fa-spin"></i>
                 <div>{{ _('Data Loading...') }}</div>
             </div>
         </div>
