--- a/profapp/templates/company/companies_partners.html
+++ b/profapp/templates/company/companies_partners.html
@@ -84,7 +84,7 @@
     <div ng-controller="company_partners" ng-cloak>
         <div class="grid" id="grid1" ui-grid-pagination ui-grid="gridOptions1">
             <div class="well grid-loading" ng-show="loading">
-                <i class="fa fa-spin fa-spinner"></i>
+                <i class="fa fa-spinner fa-spin"></i>
                 <div>{{ _('Data Loading...') }}</div>
             </div>
         </div>
