--- a/profapp/templates/company/portal_banners.html
+++ b/profapp/templates/company/portal_banners.html
@@ -136,7 +136,7 @@
     <div ng-controller="portal_banners" ng-cloak>
         <div class="grid" id="grid1" ui-grid-pagination ui-grid-edit ui-grid="gridOptions">
             <div class="well grid-loading" ng-show="loading">
-                <i class="fa fa-spin fa-spinner"></i>
+                <i class="fa fa-spinner fa-spin"></i>
                 <div>{{ _('Data Loading...') }}</div>
             </div>
         </div>
