--- a/profapp/templates/portal/portal_publications.html
+++ b/profapp/templates/portal/portal_publications.html
@@ -121,7 +121,7 @@
         <h2>{{ _('Publications at portal') }}</h2>
         <div class="grid" id="grid1" ui-grid-pagination ui-grid="gridOptions1">
             <div class="well grid-loading" ng-show="loading">
-              <i class="fa fa-spin fa-spinner"></i><div>{{ _('Data Loading...') }}</div>
+              <i class="fa fa-spinner fa-spin"></i><div>{{ _('Data Loading...') }}</div>
             </div>
         </div>
     </div>
